# pop-docs

./: AUTHORS  LICENSE  MAINTAINERS  Makefile  Makefile.am  README  REVISION  Rakefile  VERSION  aclocal.m4  autogen.sh  broken_translations  check-before-commit  collect-screenshots-with-mouse.sh  collect-screenshots-without-mouse.sh  collect-screenshots.sh  configure.ac  configure.in  getkdev.sh  html.sh  i18n.sh  imgsel  index.xml  make-po  make-pot  olinkdb.xml  translations-syntax-fix.sh  ubuntu-docs_1.0.orig.tar.gz.delta  ubuntu-docs_1.0.orig.tar.gz.id  update-translations.sh  validate.sh  yelptest
ubuntu-help/: Makefile.am  ubuntu-help.pot
ubuntu-help/C/: a11y-bouncekeys.page  a11y-braille.page  a11y-contrast.page  a11y-dwellclick.page  a11y-font-size.page  a11y-icon.page  a11y-icon.page.stub  a11y-locate-pointer.page  a11y-mag.stub  a11y-right-click.page  a11y-screen-reader.page  a11y-slowkeys.page  a11y-stickykeys.page  a11y-visualalert.page  a11y.page  about-this-guide.page  accounts-add.page  accounts-create.page  accounts-disable-service.page  accounts-provider-not-available.page  accounts-remove.page  accounts-which-application.page  accounts-whyadd.page  accounts.page  addremove-creator.page  addremove-install-synaptic.page  addremove-install.page  addremove-ppa.page  addremove-remove.page  addremove-sources.page  addremove.page  app-banshee.page.stub  app-cheese.page  app-pitivi.page.stub  app-shotwell.page.stub  app-totem.page.stub  backup-check.page  backup-frequency.page  backup-how.page  backup-restore.page  (+330 more)
ubuntu-help/af/: af.po
ubuntu-help/am/: am.po
(+10740 files in other folders)
