@YELP_HELP_RULES@

HELP_ID = ubuntu-help

# ubuntu-docs languages:
#   af am ar ast az bg bo br bs ca ce ceb ckb cs da de el en_AU en_CA en_GB eo es et eu fi
#   fo fr gl he hi hr hu ia id it ja kab kk kn ko lt lv mg mjw ms my nb ne nl oc pl pt_BR
#   pt ro ru si sk sl sq sr sv ta te tg th tl tr ug uk ur uz wo zh_CN zh_HK zh_TW
# gnome-user-docs languages:
#   as ca cs da de el fi fr es gl gu he hi hr hu id it ja kn lv mr nl pa pl pt pt_BR ro ru sl sr sr@latin sv te vi ta zh_CN
#
# We build localized pages for the intersection of the two sets:
HELP_LINGUAS = ca cs da de el es fi fr gl he hi hr hu id it ja kn lv nl pl pt pt_BR ro ru sl sr sv ta te zh_CN

HELP_MEDIA = \
	figures/ubuntu-logo.png

# pages forked from gnome-user-docs and modified for Ubuntu
# Not installed:
#   help-irc.page
#   help-mailing-list.page
#   translate.page
FORKED = \
	about-this-guide.page \
	get-involved.page \
	index.page \
	more-help.page \
	net-install-flash.page

# Ubuntu extras
EXTRAS = \
	legal.xml \
	addremove-creator.page \
	addremove-install.page \
	addremove-install-synaptic.page \
	addremove.page \
	addremove-ppa.page \
	addremove-remove.page \
	addremove-sources.page \
	app-cheese.page \
	community-support.page \
	net-chat-empathy.page \
	net-chat.page \
	net-chat-skype.page \
	net-chat-video.page \
	numeric-keypad.page \
	prefs-language-install.page \
	report-ubuntu-bug.page \
	startup-applications.page \
	video-dvd-restricted.page

HELP_FILES = $(FORKED) $(EXTRAS)
